--- a/BBAuto/BBAuto.csproj
+++ b/BBAuto/BBAuto.csproj
@@ -495,6 +495,25 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendDocumentForms\SelectDocumentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendDocumentForms\SelectDocumentsForm.Designer.cs">
+      <DependentUpon>SelectDocumentsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SendDocumentForms\SelectRecipientEnum.cs" />
+    <Compile Include="SendDocumentForms\SelectRecipientStep1Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendDocumentForms\SelectRecipientStep1Form.Designer.cs">
+      <DependentUpon>SelectRecipientStep1Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SendDocumentForms\SelectRecipientStep2Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SendDocumentForms\SelectRecipientStep2Form.Designer.cs">
+      <DependentUpon>SelectRecipientStep2Form.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddEdit\Account_AddEdit.resx">
       <DependentUpon>Account_AddEdit.cs</DependentUpon>
     </EmbeddedResource>
@@ -719,6 +738,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SendDocumentForms\SelectDocumentsForm.resx">
+      <DependentUpon>SelectDocumentsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SendDocumentForms\SelectRecipientStep1Form.resx">
+      <DependentUpon>SelectRecipientStep1Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SendDocumentForms\SelectRecipientStep2Form.resx">
+      <DependentUpon>SelectRecipientStep2Form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
