--- a/BBAuto.Repository/BBAuto.Repository.csproj
+++ b/BBAuto.Repository/BBAuto.Repository.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Interfaces\IDbComp.cs" />
     <Compile Include="Interfaces\IDbCustomer.cs" />
     <Compile Include="Interfaces\IDbDocument.cs" />
+    <Compile Include="Interfaces\IDbDriverInstruction.cs" />
     <Compile Include="Interfaces\IDbDriverTransponder.cs" />
     <Compile Include="Interfaces\IDbTransponder.cs" />
     <Compile Include="IRepository.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Models\DbComp.cs" />
     <Compile Include="Models\DbCustomer.cs" />
     <Compile Include="Models\DbDocument.cs" />
+    <Compile Include="Models\DbDriverInstruction.cs" />
     <Compile Include="Models\DbDriverTransponder.cs" />
     <Compile Include="Models\DbReportTransponder.cs" />
     <Compile Include="Models\DbTransponder.cs" />
