--- a/BBAuto/BBAuto.csproj
+++ b/BBAuto/BBAuto.csproj
@@ -495,6 +495,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\ReportMileageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\ReportMileageForm.Designer.cs">
+      <DependentUpon>ReportMileageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SendDocumentForms\SelectDocumentsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -738,6 +744,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report\ReportMileageForm.resx">
+      <DependentUpon>ReportMileageForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SendDocumentForms\SelectDocumentsForm.resx">
       <DependentUpon>SelectDocumentsForm.cs</DependentUpon>
     </EmbeddedResource>
