--- a/ClassLibraryBBAuto/app.config
+++ b/ClassLibraryBBAuto/app.config
@@ -27,6 +27,10 @@
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Insight.Database.Core" publicKeyToken="f35c6ef87e515afc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.5.0" newVersion="6.2.5.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
