--- a/BBAuto/App.config
+++ b/BBAuto/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.serviceModel>
+  <runtime>
+    <loadFromRemoteSources enabled="true"/>
+  </runtime>
+  <system.serviceModel>
         <bindings>
             <basicHttpBinding>
                 <binding name="BBAutoServiceSoap" maxBufferSize="64000000" maxReceivedMessageSize="64000000" />
